--- a/GoogleMap.html
+++ b/GoogleMap.html
@@ -28,12 +28,28 @@
 <link rel="stylesheet" type="text/css" href="AlbanyORHistoryWebSitesStyleSheet.css">
 </head><body><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45656.740189538665!2d-123.0714494672206!3d44.62742031827645!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1508677981243" width="100%" height="510" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
   <div id="text"><div style="background-color:white; border: 2px solid white;
-   border-radius: 4px;">Albany Maps by Year-<a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852</a><a   href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913</a><a style="color:white; background-color:red; cursor:none;" href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017</a></div></div>
+   border-radius: 4px;">Albany Maps by Year-<a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852</a><a   href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913</a><a style="color:white; background-color:red; cursor:none;" href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017</a><br><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html" target= "_parent">Linn Co.'78</a></div>
+</div>
+<!-- Start Floating Layer -->
+<div id="FloatingLayer" style="position:fixed;width:66px;left:10px;top:100px;visibility:visible; border:solid 0px #FF6600;">
+   <div id="titleBar" style="cursor:move; width:0%; position:relative; border-bottom:solid 0px #FF6600; background-color:#FF9933;">
+        <div id="title" style="margin-right:0px; padding-left:0px;">
+            <font face="Arial" color="#333333"></font>
+        </div>
+        <div id="closeX" style="cursor:hand; position:absolute; right:5px; top:0px;">
+            <a href="#" onClick="ToggleFloatingLayer('FloatingLayer',0);return false"  style="text-decoration:none"><font color="#333333" size="2" face="arial"></font></a>
+        </div>
+    </div>
+    <div id="floatingContent" style="padding:3px; background-color:transparent; color:;">
+        <!-- place your HTML content here-->
+     <pre> <a href="https://albanyoregon.github.io/"><img src="https://albanyoregon.github.io/assets/images/albany-github-icon-origonal-241x241.png" alt="TM"  title="AlbanyORHistory
+        HOME" style="width:66px;height:66px;"></a></pre>
 
+        <!-- End of content area -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '117812298943734',
+      appId      : '124795608278612',
       cookie     : true,
       xfbml      : true,
       version    : 'v2.8'
