--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
                         <div class="mbr-section-btn text-center"><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html" class="btn btn-secondary-outline display-4" target="_blank">1878</a></div>
-                        <a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html"><img src="https://albanyoregon.github.io/assets/images/SetOFtwelve.png" alt="1878 Linn County Map Set" title="" style="width:200px;height:200px;" media-simple="true"></a>
+                        <a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html"><img src="https://albanyoregon.github.io/assets/images/SetOFtwelve.png" alt="1878 Linn County Map Set" title="Set of 12 Maps"  media-simple="true"></a>
                     </div>
                     
                 </div>
