--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html" class="btn btn-secondary-outline display-4" target="_blank">1878</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html" class="btn btn-secondary-outline display-4" target="_blank">Linn 
+                         County</a></div>
                         <a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html"><img src="https://albanyoregon.github.io/assets/images/SetOFtwelve.png" alt="1878 Linn County Map Set" title="Set of 12 Maps"  media-simple="true"></a>
                     </div>
                     
