--- a/1852Map.html
+++ b/1852Map.html
@@ -39,7 +39,7 @@ General Land Office maps (GLOs) are a result of the effort to survey all United 
             <font face="Arial" color="#333333"></font>
         </div>
         <div id="closeX" style="cursor:hand; position:absolute; right:5px; top:0px;">
-            <a href="" onClick="ToggleFloatingLayer('FloatingLayer',0);return false"  style="text-decoration:none"><font color="#333333" size="0" face="arial"></font></a>
+            
         </div>
     </div>
     <div id="floatingContent" style="padding:3px; background-color:transparent; color:;">
@@ -48,6 +48,7 @@ General Land Office maps (GLOs) are a result of the effort to survey all United 
         HOME" style="width:66px;height:66px;"></a></pre>
 
         <!-- End of content area -->
+     </div>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
