--- a/ArielPhotos.html
+++ b/ArielPhotos.html
@@ -27,11 +27,44 @@
 <meta name="msapplication-TileColor" content="#00FF00">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
-<link rel="stylesheet" type="text/css" href="AlbanyORHistoryWebSitesStyleSheet.css">
-</head><body><iframe src="https://photos.google.com/share/AF1QipPsDVs7QJIbaMl6RkrA00uqUcAWv15JhhQaQ73HJHdgIWLiHKkiQOJ_xCHeBaXjQA/photo/AF1QipNBLX_3lNUd8fVAwPrxY5f_9rbOenDBiP8fFZDi?key=TnhWNUlfS01xMGc0dW1vZ2VWQW5DSERtdkh5YWZn" width="100%" height="510"></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="small"></div></div><div class="main"><p>This is a hybrid map consisting of two individual 1852 General Land Office maps. It is over 7,000 pixels wide and over 4,000 pixels tall, so it takes some time to load. <br>
-General Land Office maps (GLOs) are a result of the effort to survey all United States public lands before settlement. Starting in 1812 land was divided into square six mile blocks called townships, then subdivided into sections and ranges. Each subdivided area was surveyed and given its own map or GLO. The Bureau of Land Management now maintains these GLOs as part of the official Land Status and Cadastral Survey records and more information may be found at http://www.blm.gov/or/landrecords/survey/ySrvy1.php. </p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
+<link rel="stylesheet" type="text/css" href="history/AlbanyORHistoryWebSitesStyleSheet.css">
+</head><body><iframe src="https://photos.google.com/share/AF1QipPsDVs7QJIbaMl6RkrA00uqUcAWv15JhhQaQ73HJHdgIWLiHKkiQOJ_xCHeBaXjQA/photo/AF1QipNBLX_3lNUd8fVAwPrxY5f_9rbOenDBiP8fFZDi?key=TnhWNUlfS01xMGc0dW1vZ2VWQW5DSERtdkh5YWZn" width="100%" height="500"></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="small"></div></div><div class="main"></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
   <div id="text">Albany Maps by Year-<a style="color:white; background-color:red; cursor:text;"  href="https://albanyoregon.github.io/1852Map.html" target="_parent">1852</a><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_parent">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_parent">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="__parent">1913</a><a href="https://albanyoregon.github.io/GoogleMap.html" target="_parent">2017</a></div>
 
+<div class="container1">
+<span><div class="dropdown">
+<img src="https://albanyoregon.github.io/assets/images/albany-github-icon-origonal-241x241.png" alt="TM"  title="Menu" style="width:66px;height:66px" class="dropbtn" onclick="myFunction()">
+
+  <div id="myDropdown" class="dropdown-content">
+  <a href="https://albanyoregon.github.io/" target="_parent" >Albany OR History Home</a>
+  <a href="https://facebook.com/pg/AlbanyORHistory/" target="_blank" > Facebook Page</a><a href="https://www.facebook.com/media/set/?set=a.1623929831003845.1073741830.328589197204588&type=1&l=3de7da6fc4" target="_blank">Towns of Linn County</a>
+    <a href="https://www.facebook.com/notes/albany-or-history/historic-photos-of-albany-oregon/1212647112132121/" target="_blank">Historic Photos</a>
+  </div>
+</div>
+</span>
+</div>
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
