--- a/GoogleMap.html
+++ b/GoogleMap.html
@@ -25,28 +25,46 @@
 <meta name="msapplication-TileColor" content="#00FF00">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
-<link rel="stylesheet" type="text/css" href="AlbanyORHistoryWebSitesStyleSheet.css">
+<link rel="stylesheet" type="text/css" href="history/AlbanyORHistoryWebSitesStyleSheet.css">
 </head><body><iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d45656.740189538665!2d-123.0714494672206!3d44.62742031827645!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1508677981243" width="100%" height="500" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
   <div id="text"><div style="background-color:white; border: 2px solid white;
    border-radius: 4px;">Albany Maps by Year-<a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852</a><a   href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913</a><a style="color:white; background-color:red; cursor:none;" href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2017</a><br><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html" target= "_parent">Linn County'78</a></div>
 </div>
-<!-- Start Floating Layer -->
-<div id="FloatingLayer" style="position:fixed;width:66px;right:25px;top:-20px;visibility:visible; border:solid 0px #FF6600;">
-   <div id="titleBar" style="cursor:move; width:0%; position:relative; border-bottom:solid 0px #FF6600; background-color:#FF9933;">
-        <div id="title" style="margin-right:0px; padding-left:0px;">
-            <font face="Arial" color="#333333"></font>
-        </div>
-        <div id="closeX" style="cursor:hand; position:absolute; right:5px; top:0px;">
-            
-        </div>
-    </div>
-    <div id="floatingContent" style="padding:3px; background-color:transparent; color:;">
-        <!-- place your HTML content here-->
-     <pre> <a href="https://albanyoregon.github.io/"><img src="https://albanyoregon.github.io/assets/images/albany-github-icon-origonal-241x241.png" alt="TM"  title="AlbanyORHistory
-        HOME" style="width:66px;height:66px;"></a></pre>
 
-        <!-- End of content area -->
-     </div>
+<div class="container1">
+<span><div class="dropdown">
+<img src="https://albanyoregon.github.io/assets/images/albany-github-icon-origonal-241x241.png" alt="TM"  title="Menu" style="width:66px;height:66px" class="dropbtn" onclick="myFunction()">
+
+  <div id="myDropdown" class="dropdown-content">
+  <a href="https://albanyoregon.github.io/" target="_parent" >Albany OR History Home</a>
+  <a href="https://facebook.com/pg/AlbanyORHistory/" target="_blank" > Facebook Page</a><a href="https://www.facebook.com/media/set/?set=a.1623929831003845.1073741830.328589197204588&type=1&l=3de7da6fc4" target="_blank">Towns of Linn County</a>
+    <a href="https://www.facebook.com/notes/albany-or-history/historic-photos-of-albany-oregon/1212647112132121/" target="_blank">Historic Photos</a>
+  </div>
+</div>
+</span>
+</div>
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
 <script>
   window.fbAsyncInit = function() {
     FB.init({
