--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html><head><title>HOME</title> 
+<html><head><title>Albany OR History</title> 
  <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="PUBLIC"/>
 <META NAME="COPYRIGHT" CONTENT="&copy; 2016 Joe LaBerge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:image"  content="https://i.imgur.com/N6u3XrC.png"/>
+    <meta property="og:image"  content="https://doc-00-7o-docs.googleusercontent.com/docs/securesc/sh17auc6hsf6qgiq48nbdlc5p40uq5sb/etdnp9kkmtcqv96ebe2vtqnmt8v6tue0/1509868800000/10336918262962672426/10336918262962672426/118v6igtBhoePWIB_XU6ZD-YReza8r2zn?e&nonce=p4qb9j86l4206&user=10336918262962672426&hash=v8s3e7ioacd5k36384ni7mf2oa202upo"/>
  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta property="fb:app_id" content="124795608278612" />  
