--- a/GoogleMap.html
+++ b/GoogleMap.html
@@ -26,7 +26,23 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
 <link rel="stylesheet" type="text/css" href="history/AlbanyORHistoryWebSitesStyleSheet.css">
-</head><body><iframe src="https://drive.google.com/file/d/18J0QsNssncUYeVprp3luuRdEkFj5tWSQ/preview" width="100%" height="500" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '240200373183495');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=240200373183495&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code --></head><body><iframe src="https://drive.google.com/file/d/18J0QsNssncUYeVprp3luuRdEkFj5tWSQ/preview" width="100%" height="500" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
   <div id="text">Albany Maps by Year-<a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852</a><a   href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913</a><a href="https://albanyoregon.github.io/history/1944Map.html" target="_parent">1944</a><a href="https://albanyoregon.github.io/history/1957Map.html" target="_parent">1957</a><a style="color:white; background-color:red; cursor:none;" href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2016</a><br></div>
 </div>
 
