--- a/1852Map.html
+++ b/1852Map.html
@@ -28,7 +28,14 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
 <link rel="stylesheet" type="text/css" href="history/AlbanyORHistoryWebSitesStyleSheet.css">
-<!-- Facebook Pixel Code -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WPG2CM7');</script>
+<!-- End Google Tag Manager -->  
+  <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -44,7 +51,12 @@
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=240200373183495&ev=PageView&noscript=1"
 /></noscript>
-<!-- End Facebook Pixel Code --></head><body><iframe src="https://drive.google.com/file/d/0B_5HquxejbSaR3g4Q2VUSi1PX2c/preview" width="100%" height="500"></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="small"></div></div><div class="main"><p>This is a hybrid map consisting of two individual 1852 General Land Office maps. It is over 7,000 pixels wide and over 4,000 pixels tall, so it takes some time to load. <br>
+<!-- End Facebook Pixel Code -->
+</head>
+<body><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPG2CM7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) --><iframe src="https://drive.google.com/file/d/0B_5HquxejbSaR3g4Q2VUSi1PX2c/preview" width="100%" height="500"></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/1852Map.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/1852Map.html" data-size="small"></div></div><div class="main"><p>This is a hybrid map consisting of two individual 1852 General Land Office maps. It is over 7,000 pixels wide and over 4,000 pixels tall, so it takes some time to load. <br>
 General Land Office maps (GLOs) are a result of the effort to survey all United States public lands before settlement. Starting in 1812 land was divided into square six mile blocks called townships, then subdivided into sections and ranges. Each subdivided area was surveyed and given its own map or GLO. The Bureau of Land Management now maintains these GLOs as part of the official Land Status and Cadastral Survey records and more information may be found at http://www.blm.gov/or/landrecords/survey/ySrvy1.php. </p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
   <div id="text">Albany Maps by Year-<a style="color:white; background-color:red; cursor:none;"  href="https://albanyoregon.github.io/1852Map.html" target="_parent">1852</a><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_parent">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_parent">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="__parent">1913</a><a href="https://albanyoregon.github.io/history/1944Map.html" target="_parent">1944</a><a href="https://albanyoregon.github.io/history/1957Map.html" target="_parent">1957</a><a href="https://albanyoregon.github.io/GoogleMap.html" target="_parent">2017</a><br><a href="https://albanyoregon.github.io/history/1878LinnCountyAtlas.html" target= "_parent">Linn County'78</a></div>
 </div>
