--- a/GoogleMap.html
+++ b/GoogleMap.html
@@ -26,7 +26,14 @@
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#00FF00">
 <link rel="stylesheet" type="text/css" href="history/AlbanyORHistoryWebSitesStyleSheet.css">
-<!-- Facebook Pixel Code -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WPG2CM7');</script>
+<!-- End Google Tag Manager -->  
+  <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -42,7 +49,12 @@
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=240200373183495&ev=PageView&noscript=1"
 /></noscript>
-<!-- End Facebook Pixel Code --></head><body><iframe src="https://drive.google.com/file/d/18J0QsNssncUYeVprp3luuRdEkFj5tWSQ/preview" width="100%" height="500" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
+<!-- End Facebook Pixel Code -->
+</head>
+<body><!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WPG2CM7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) --><iframe src="https://drive.google.com/file/d/18J0QsNssncUYeVprp3luuRdEkFj5tWSQ/preview" width="100%" height="500" frameborder="2" style="border:2" allowfullscreen></iframe><div class="left"><div class="fb-like" data-href="https://albanyoregon.github.io/GoogleMap.html" data-width="225" data-layout="standard" data-action="like" data-colorscheme="dark" data-size="small" data-show-faces="true" data-share="true"></div><br><div class="fb-save" data-uri="https://albanyoregon.github.io/GoogleMap.html" data-size="small"></div></div><div class="main"><p></p></div><div class="right"><div class="fb-page" data-href="https://www.facebook.com/AlbanyORHistory" data-width="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/AlbanyORHistory" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/AlbanyORHistory">Albany OR History</a></blockquote></div></div>
   <div id="text">Albany Maps by Year-<a href="https://albanyoregon.github.io/1852Map.html" target="_blank">1852</a><a   href="https://albanyoregon.github.io/history/1878LinnCountyAtlasMaps.html" target="_blank">1878</a><a href="https://albanyoregon.github.io/history/1890Map.html" target="_blank">1890</a><a href="https://albanyoregon.github.io/history/1913Map.html" target="_blank">1913</a><a href="https://albanyoregon.github.io/history/1944Map.html" target="_parent">1944</a><a href="https://albanyoregon.github.io/history/1957Map.html" target="_parent">1957</a><a style="color:white; background-color:red; cursor:none;" href="https://albanyoregon.github.io/GoogleMap.html" target="_blank">2016</a><br></div>
 </div>
 
