--- a/1944ariel.html
+++ b/1944ariel.html
@@ -43,8 +43,8 @@
 
 <script type="text/javascript" charset="utf-8">
 
-            var theImage =  "http://extrazoom.com/image-32771.html",
-                HTTP_NAME = "Albany 1944",
+            var theImage =  "https://albanyoregon.github.io./1944ariel.html",
+                HTTP_NAME = "https://albanyoregon.github.io",
                 TOUCH_ENABLE,
                 SWF_VIEWER,
                 isInFrame = top === self ? false:true;
@@ -60,8 +60,8 @@
 
                     if (swfobject.hasFlashPlayerVersion("10.0.0")) {//10
                         // has Flash
-                        var att = { data:"http://extrazoom.com/extrazoom-viewer.swf", width:"500", height:"500" };
-                        var par = { flashvars:"&animate=1&fill=&btn_bg=000000&btn_fg=FFFFFF&pos_h=50&pos_v=50&autohide=0&image=http%3A%2F%2Fextrazoom.com%2Ffiles%2Fflg%2Fimage-32771", wmode:"opaque", bgcolor:"#333333", quality:"best"};
+                        var att = { data:"https://albanyoregon.github.io./extrazoom-viewer.swf", width:"500", height:"500" };
+                        var par = { flashvars:"&animate=1&fill=&btn_bg=000000&btn_fg=FFFFFF&pos_h=50&pos_v=50&autohide=0&image=https%3A%2F%2Fhttps://albanyoregon.github.io%2Ffiles%2Fflg%2Fimage-32771", wmode:"opaque", bgcolor:"#333333", quality:"best"};
                         var id = "extrazoom_viewer";
                         SWF_VIEWER = swfobject.createSWF(att, par, id);
                         $(window).bind("resize.viewer", function(){
@@ -109,7 +109,7 @@
 
 
 <!--[if lt IE 9]>
-    <script src="http://extrazoom.com/gp-theme/js/html5.js"></script>
+    <script src="https://albanyoregon.github.io./gp-theme/js/html5.js"></script>
     <style type="text/css">
 	   aside, nav, footer, header, section { display: block }
     </style>
